--- a/resources/sass/_dark-theme.scss
+++ b/resources/sass/_dark-theme.scss
@@ -19,3 +19,7 @@
     color: #b4d9ca !important;
 }
 
+[data-theme="dark"] #nav-logo .active-link span {
+    color: #b4d9ca !important;
+}
+
