--- a/resources/sass/_nav-style.scss
+++ b/resources/sass/_nav-style.scss
@@ -6,6 +6,9 @@ nav .active-link {
 #nav-logo .active-link {
     background-color: transparent;
 
+    span {
+        color: #253ebbd4 !important;
+    }
 }
 
 .navbar-style {
